<resources>
    <string name="app_name">Avengers</string>
    <string name="the_avengers_is_a_2012_american_superhero_film_based_on_the_marvel_comics_superhero_team_of_the_same_name_produced_by_marvel_studios_and_distributed_by_walt_disney_studios_motion_pictures_it_is_the_sixth_film_in_the_marvel_cinematic_universe_mcu_written_and_directed_by_joss_whedon_the_film_features_an_ensemble_cast_including_robert_downey_jr_chris_evans_mark_ruffalo_chris_hemsworth_scarlett_johansson_and_jeremy_renner_as_the_avengers_alongside_tom_hiddleston_clark_gregg_cobie_smulders_stellan_skarsg_rd_and_samuel_l_jackson_in_the_film_nick_fury_and_the_spy_agency_s_h_i_e_l_d_recruit_tony_stark_steve_rogers_bruce_banner_and_thor_to_form_a_team_capable_of_stopping_thor_s_brother_loki_from_subjugating_earth">The Avengers is a 2012 American superhero film based on the Marvel Comics superhero team of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the sixth film in the Marvel Cinematic Universe (MCU). Written and directed by Joss Whedon, the film features an ensemble cast including Robert Downey Jr., Chris Evans, Mark Ruffalo, Chris Hemsworth, Scarlett Johansson, and Jeremy Renner as the Avengers, alongside Tom Hiddleston, Clark Gregg, Cobie Smulders, Stellan Skarsgård, and Samuel L. Jackson. In the film, Nick Fury and the spy agency S.H.I.E.L.D. recruit Tony Stark, Steve Rogers, Bruce Banner, and Thor to form a team capable of stopping Thor\'s brother Loki from subjugating Earth.</string>
    <string name="superheroes">SUPERHEROES</string>
    <string name="hulk_also_known_as_the_hulk_is_an_american_superhero_based_on_the_marvel_comics_character_eric_bana_stars_as_bruce_banner_hulk_the_film_explores_the_origins_of_bruce_banner_after_a_lab_accident_involving_gamma_radiation_he_finds_himself_able_to_turn_into_a_giant_green_skinned_creature_whenever_emotionally_provoked_or_stressed_the_united_states_military_pursues_him_and_he_comes_into_conflict_with_his_biological_father_who_has_a_dark_plan_for_his_son">Hulk (also known as The Hulk) is an American superhero based on the Marvel Comics character. Eric Bana stars as Bruce Banner/Hulk. The film explores the origins of Bruce Banner. After a lab accident involving gamma radiation, he finds himself able to turn into a giant green-skinned creature whenever emotionally provoked or stressed. The United States military pursues him, and he comes into conflict with his biological father, who has a dark plan for his son.</string>
    <string name="avengers">AVENGERS</string>
    <string name="to_know_more_about_avenger_superheroes_click_on_respective_button">To know more about avenger superheroes, click on respective button</string>
    <string name="scarlett_witch">SCARLETT WITCH</string>
    <string name="black_panther">BLACK PANTHER</string>
    <string name="in_2009_t_chaka_s_son_prince_t_challa_adopted_the_mantle_of_the_black_panther_as_his_father_retired_from_the_role_t_challa_then_designed_his_own_panther_habit_taking_inspiration_from_his_father_s_habit_in_the_week_following_his_appointment_as_black_panther_t_challa_and_okoye_were_sent_on_a_mission_to_save_wakandan_hostages_from_zanda_a_narobian_terrorist_and_douglas_scott_during_their_confrontation_with_zanda_t_challa_was_shot_in_the_shoulder_with_a_vibranium_bullet_damaging_it">In 2009, T\'Chaka\'s son, Prince T\'Challa, adopted the mantle of the Black Panther as his father retired from the role. T\'Challa then designed his own Panther Habit, taking inspiration from his father\'s Habit. In the week following his appointment as Black Panther, T\'Challa and Okoye were sent on a mission to save Wakandan hostages from Zanda, a Narobian terrorist, and Douglas Scott. During their confrontation with Zanda, T\'Challa was shot in the shoulder with a Vibranium bullet, damaging it.</string>
    <string name="hawkeye_clinton_francis_barton_is_a_fictional_superhero_appearing_in_marvel_s_avengers_series_created_by_writer_stan_lee_and_artist_don_heck_the_character_first_appeared_as_a_villain_in_tales_of_suspense_and_later_joined_the_avengers_in_the_avengers_he_has_been_a_prominent_member_of_the_team_ever_since">Hawkeye (Clinton Francis Barton) is a fictional superhero appearing in Marvel\'s Avengers series. Created by writer Stan Lee and artist Don Heck, the character first appeared as a villain in Tales of Suspense and later joined the Avengers in The Avengers. He has been a prominent member of the team ever since.</string>
    <string name="hawk_eye">HAWK EYE</string>
    <string name="at_birth_the_black_widow_aka_natasha_romanova_is_given_to_the_kgb_which_grooms_her_to_become_its_ultimate_operative_when_the_u_s_s_r_breaks_up_the_government_tries_to_kill_her_as_the_action_moves_to_present_day_new_york_where_she_is_a_freelance_operative">At birth the Black Widow (aka Natasha Romanova) is given to the KGB, which grooms her to become its ultimate operative. When the U.S.S.R. breaks up, the government tries to kill her as the action moves to present-day New York, where she is a freelance operative.</string>
    <string name="black_widow">BLACK WIDOW</string>
    <string name="it_is_1942_america_has_entered_world_war_ii_and_sickly_but_determined_steve_rogers_is_frustrated_at_being_rejected_yet_again_for_military_service_everything_changes_when_dr_erskine_recruits_him_for_the_secret_project_rebirth_proving_his_extraordinary_courage_wits_and_conscience_rogers_undergoes_the_experiment_and_his_weak_body_is_suddenly_enhanced_into_the_maximum_human_potential_when_dr_erskine_is_then_immediately_assassinated_by_an_agent_of_nazi_germany_s_secret_hydra_research_department_rogers_is_left_as_a_unique_man_who_is_initially_misused_as_a_propaganda_mascot_however_when_his_comrades_need_him_rogers_goes_on_a_successful_adventure_that_truly_makes_him_captain_america_and_his_war_against_schmidt_begins">It is 1942, America has entered World War II, and sickly but determined Steve Rogers is frustrated at being rejected yet again for military service. Everything changes when Dr. Erskine recruits him for the secret Project Rebirth. Proving his extraordinary courage, wits and conscience, Rogers undergoes the experiment and his weak body is suddenly enhanced into the maximum human potential. When Dr. Erskine is then immediately assassinated by an agent of Nazi Germany\'s secret HYDRA research department, Rogers is left as a unique man who is initially misused as a propaganda mascot; however, when his comrades need him, Rogers goes on a successful adventure that truly makes him Captain America, and his war against Schmidt begins.</string>
    <string name="captain_america">CAPTAIN AMERICA</string>
    <string name="in_1995_danvers_becomes_captain_marvel_after_earth_is_caught_in_the_center_of_a_galactic_conflict_between_two_alien_civilizations_amidst_a_mission_vers_a_kree_warrior_gets_separated_from_her_team_and_is_stranded_on_earth_however_her_life_takes_an_unusual_turn_after_she_teams_up_with_fury_a_s_h_i_e_l_d_agent">In 1995, Danvers becomes Captain Marvel after Earth is caught in the center of a galactic conflict between two alien civilizations.Amidst a mission, Vers, a Kree warrior, gets separated from her team and is stranded on Earth. However, her life takes an unusual turn after she teams up with Fury, a S.H.I.E.L.D. agent.</string>
    <string name="captain_marvel">CAPTAIN MARVEL</string>
    <string name="stephen_vincent_strange_m_d_ph_d_is_a_powerful_sorcerer_and_master_of_the_mystic_arts_originally_a_brilliant_although_arrogant_neurosurgeon_strange_got_into_a_car_accident_which_resulted_with_his_hands_becoming_crippled_when_all_western_medicine_failed_him_strange_embarked_on_a_journey_that_led_him_into_kamar_taj_where_strange_had_made_the_discovery_of_magic_and_alternate_dimensions_being_trained_by_the_ancient_one_though_focused_on_healing_his_hands_and_returning_into_his_career_strange_learned_more_of_the_mystic_arts_and_helped_the_masters_prevent_kaecilius_from_merging_the_earth_with_the_dark_dimension_but_not_before_witnessing_the_ancient_one_s_death_following_the_demise_of_their_mentor_strange_became_the_protector_of_the_new_york_sanctum_in_new_york_as_well_as_the_earth_s_protector_from_any_new_inter_dimensional_threats">Stephen Vincent Strange M.D., Ph.D is a powerful sorcerer and Master of the Mystic Arts. Originally a brilliant, although arrogant, neurosurgeon, Strange got into a car accident which resulted with his hands becoming crippled. When all Western medicine failed him, Strange embarked on a journey that led him into Kamar-Taj where Strange had made the discovery of magic and alternate dimensions, being trained by the Ancient One. Though focused on healing his hands and returning into his career, Strange learned more of the mystic arts and helped the Masters prevent Kaecilius from merging the Earth with the Dark Dimension, but not before witnessing the Ancient One\'s death. Following the demise of their mentor, Strange became the protector of the New York Sanctum in New York as well as the Earth\'s protector from any new inter-dimensional threats.</string>
    <string name="dr_strange">DR. STRANGE</string>
    <string name="iron_man_is_a_fictional_superhero_appearing_in_american_comic_books_published_by_marvel_comics_the_character_was_co_created_by_writer_and_editor_stan_lee_developed_by_scripter_larry_lieber_and_designed_by_artists_don_heck_and_jack_kirby_the_character_made_his_first_appearance_in_tales_of_suspense_and_received_his_own_title_in_iron_man_also_in_1963_the_character_founded_the_avengers_a_wealthy_american_business_magnate_playboy_philanthropist_inventor_and_ingenious_scientist_anthony_edward_tony_stark_suffers_a_severe_chest_injury_during_a_kidnapping_when_his_captors_attempt_to_force_him_to_build_a_weapon_of_mass_destruction_he_instead_creates_a_mechanized_suit_of_armor_to_save_his_life_and_escape_captivity_later_stark_develops_his_suit_adding_weapons_and_other_technological_devices_he_designed_through_his_company_stark_industries_he_uses_the_suit_and_successive_versions_to_protect_the_world_as_iron_man_although_at_first_concealing_his_true_identity_stark_eventually_publicly_reveals_himself_to_be_iron_man">Iron Man is a fictional superhero appearing in American comic books published by Marvel Comics. The character was co-created by writer and editor Stan Lee, developed by scripter Larry Lieber, and designed by artists Don Heck and Jack Kirby. The character made his first appearance in Tales of Suspense, and received his own title in Iron Man. Also in 1963, the character founded the Avengers.A wealthy American business magnate, playboy, philanthropist, inventor and ingenious scientist, Anthony Edward TonyStark suffers a severe chest injury during a kidnapping. When his captors attempt to force him to build a weapon of mass destruction, he instead creates a mechanized suit of armor to save his life and escape captivity. Later, Stark develops his suit, adding weapons and other technological devices he designed through his company, Stark Industries. He uses the suit and successive versions to protect the world as Iron Man. Although at first concealing his true identity, Stark eventually publicly reveals himself to be Iron Man.</string>
    <string name="iron_man">IRON MAN</string>
    <string name="hulk">HULK</string>
    <string name="spider_man">SPIDER MAN</string>
    <string name="thor">THOR</string>
    <string name="vision">VISION</string>
</resources>