<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Superheroes">


    <TextView
        android:id="@+id/editTextTextMultiLine14"
        android:layout_width="344dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/to_know_more_about_avenger_superheroes_click_on_respective_button"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blackPanther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="#FFFFFF"
        android:text="@string/black_panther"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/blackWidow"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine14" />

    <Button
        android:id="@+id/blackWidow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/black_widow"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine14" />

    <Button
        android:id="@+id/ctAmerica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/captain_america"
        android:textColor="#2196F3"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/ctMarvel"
        app:layout_constraintTop_toBottomOf="@+id/blackPanther" />

    <Button
        android:id="@+id/ctMarvel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"

        android:text="@string/captain_marvel"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackWidow" />

    <Button
        android:id="@+id/drStrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/dr_strange"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/ironMan"
        app:layout_constraintTop_toBottomOf="@+id/hulk" />

    <Button
        android:id="@+id/hawkEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"

        android:text="@string/hawk_eye"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctMarvel" />

    <Button
        android:id="@+id/hulk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/hulk"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/hawkEye"
        app:layout_constraintTop_toBottomOf="@+id/ctAmerica" />

    <Button
        android:id="@+id/ironMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"

        android:text="@string/iron_man"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hawkEye" />

    <Button
        android:id="@+id/scarlett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/scarlett_witch"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/spider"
        app:layout_constraintTop_toBottomOf="@+id/drStrange" />

    <Button
        android:id="@+id/spider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"

        android:text="@string/spider_man"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ironMan" />

    <Button
        android:id="@+id/thor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/thor"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/vision"
        app:layout_constraintTop_toBottomOf="@+id/scarlett" />

    <Button
        android:id="@+id/vision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"

        android:text="@string/vision"
        android:textColor="#2196F3"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spider" />

</androidx.constraintlayout.widget.ConstraintLayout>